# app.js
@@ -208,7 +208,8 @@ app.post('/team/report/:team_id', sessChk(true), routes_ajax.modifyReport);
 app.put('/team/report/:team_id', sessChk(true), routes_ajax.createReport);
 app.delete('/team/report/:team_id', sessChk(true), routes_ajax.deleteReport);
 
-app.get('/user/schedule/sync', sessChk(true), routes_ajax.syncSchedule);
+app.post('/user/portal/sync', sessChk(true), routes_ajax.syncPortal);
+app.get('/user/calendar/sync', sessChk(true), routes_ajax.syncCalendar);
 app.get('/user/schedule/list', sessChk(true), routes_ajax.getUserScheduleList);
 app.get('/user/schedule', sessChk(true), routes_ajax.getUserSchedule);
 app.put('/user/schedule', sessChk(true), routes_ajax.addSchedule);
